syntax = "proto3";

package cart;

option java_package = "com.example.grpc.cart.stubs";
option java_multiple_files = true;

message CartUpdateRequest {
  string user_id = 1;
  int32 version_number = 2;
  repeated CartUpdateRequestEntry entries = 3;

  message CartUpdateRequestEntry {
    string product_id = 1;
    string product_name = 2;
    int32 qty_adjustment = 3;
    CartAction action = 4;
  }

  enum CartAction {
    QTY_CHANGE = 0;
    DROP_ITEM = 1;
    ABANDON_CART = 2;
  }
}

message GetCartByUserIdRequest {
  string user_id = 1;
}

message Cart {
  string user_id = 1;
  int32 version_number = 2;
  map<string, CartItem> items = 3;
  map<string, ProductAvailability> product_availabilities = 4;
  map<string, CartValidation> validations = 5;
}

message CartItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
}

message ProductAvailability {
  string product_id = 1;
  string product_name = 2;
  double price = 3;
  int32 available_stock = 4;
  bool is_available = 5;
}

message CartValidation {
  string product_id = 1;
  string message = 2;
  CartValidationType type = 3;
}

enum CartValidationType {
  INSUFFICIENT_STOCK = 0;
  OUT_OF_STOCK = 1;
  PRODUCT_UNAVAILABLE = 2;
}

service CartService {
  rpc getCartByUserId (GetCartByUserIdRequest) returns (GetCartByUserIdResult);
  rpc cartUpdateRequest (CartUpdateRequest) returns (CartUpdateRequestResult);
}

message CartUpdateRequestResult {
  bool success = 1;
  string message = 2;
}

message GetCartByUserIdResult {
  Cart cart = 1;
}